--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.14.0",
     "jstransformer-babel": "^2.1.0",
     "node-sass-middleware": "^0.9.8",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "stop": "^3.1.0"
   }
 }
